--- a/E-commerce-ASP/bin/E-commerce-ASP.dll.config
+++ b/E-commerce-ASP/bin/E-commerce-ASP.dll.config
@@ -5,11 +5,13 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-E-commerce-ASP-20220105014724.mdf;Initial Catalog=aspnet-E-commerce-ASP-20220105014724;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="E_commerce_ASPContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=E_commerce_ASPContext-20220109170922; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|E_commerce_ASPContext-20220109170922.mdf" providerName="System.Data.SqlClient" />
+    <add name="Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-E-commerce-ASP-20220105014724.mdf;initial catalog=aspnet-E-commerce-ASP-20220105014724;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
