Added logs and statistics

--- a/E-commerce-ASP/E-commerce-ASP.csproj
+++ b/E-commerce-ASP/E-commerce-ASP.csproj
@@ -218,6 +218,14 @@
     <Compile Include="Migrations\202201112221265_Fix new user id.Designer.cs">
       <DependentUpon>202201112221265_Fix new user id.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202201131304278_Added Hitorique.cs" />
+    <Compile Include="Migrations\202201131304278_Added Hitorique.Designer.cs">
+      <DependentUpon>202201131304278_Added Hitorique.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202201131508070_Added Problem.cs" />
+    <Compile Include="Migrations\202201131508070_Added Problem.Designer.cs">
+      <DependentUpon>202201131508070_Added Problem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Category.cs" />
@@ -465,6 +473,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202201112221265_Fix new user id.resx">
       <DependentUpon>202201112221265_Fix new user id.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202201131304278_Added Hitorique.resx">
+      <DependentUpon>202201131304278_Added Hitorique.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202201131508070_Added Problem.resx">
+      <DependentUpon>202201131508070_Added Problem.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
