--- a/E-commerce-ASP/E-commerce-ASP.csproj
+++ b/E-commerce-ASP/E-commerce-ASP.csproj
@@ -250,6 +250,26 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Views\Account\Account.fr.Designer.cs">
+      <DependentUpon>Account.fr.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Resources\Views\Account\Account.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Account.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\Views\Admin\Admin.fr.Designer.cs">
+      <DependentUpon>Admin.fr.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Resources\Views\Admin\Admin.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Admin.resx</DependentUpon>
+    </Compile>
     <Compile Include="Resources\Views\Home\About.fr.Designer.cs">
       <DependentUpon>About.fr.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -259,6 +279,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>About.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\Views\Home\Footer.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Footer.resx</DependentUpon>
     </Compile>
     <Compile Include="Resources\Views\Home\Index.fr.Designer.cs">
       <DependentUpon>Index.fr.resx</DependentUpon>
@@ -504,8 +529,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Resources\Models\" />
-    <Folder Include="Resources\Views\Account\" />
-    <Folder Include="Resources\Views\Admin\" />
     <Folder Include="Resources\Views\Manage\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
@@ -568,6 +591,22 @@
     <EmbeddedResource Include="Migrations\202201131915030_Added_DateTime.resx">
       <DependentUpon>202201131915030_Added_DateTime.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Views\Account\Account.fr.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Account.fr.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Views\Account\Account.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Account.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Views\Admin\Admin.fr.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Admin.fr.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Views\Admin\Admin.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Admin.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\Views\Home\About.fr.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>About.fr.Designer.cs</LastGenOutput>
@@ -575,6 +614,10 @@
     <EmbeddedResource Include="Resources\Views\Home\About.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>About.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Views\Home\Footer.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Footer.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Views\Home\Index.fr.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
