--- a/E-commerce-ASP/E-commerce-ASP.csproj
+++ b/E-commerce-ASP/E-commerce-ASP.csproj
@@ -262,6 +262,11 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Models\AccountViewModels.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AccountViewModels.resx</DependentUpon>
+    </Compile>
     <Compile Include="Resources\Models\Product.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -615,6 +620,11 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202201221303045_product remove required image.resx">
       <DependentUpon>202201221303045_product remove required image.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Models\AccountViewModels.fr.resx" />
+    <EmbeddedResource Include="Resources\Models\AccountViewModels.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>AccountViewModels.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Models\Product.fr.resx" />
     <EmbeddedResource Include="Resources\Models\Product.resx">
